--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react-awesome-reveal": "^4.2.5",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-scroll": "^1.8.9"
+    "react-particles": "^2.12.2",
+    "react-scroll": "^1.8.9",
+    "react-vertical-timeline-component": "^3.6.0",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
