--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-particles": "^2.12.2",
+    "react-router-dom": "^7.7.1",
     "react-scroll": "^1.8.9",
+    "react-tabs": "^6.0.2",
     "react-vertical-timeline-component": "^3.6.0",
     "swiper": "^11.1.14"
   },
